# torsmo

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  changelog.html  changelog2html.py  common.c  config.h.in  configure  configure.in  freebsd.c  fs.c  linux.c  mail.c  mixer.c  mkinstalldirs  netbsd.c  nvctrl.c  readme.html  seti.c  solaris.c  torsmo.1  torsmo.c  torsmo.h  torsmo.x  x11.c
